# NUR-public

./: .dockerignore  .env.example  .gitignore  COUSIN_RELEASE_STATUS.md  COUSIN_START_HERE.md  DEMO_SCRIPT.md  Makefile  NUR_RECENTLY_CHANGED_FILES.txt  NUR_WIP_FILE_LIST.txt  QUICKSTART_BOOT.md  README.md  RUNBOOK.md  RUN_NUR.command  RUN_NUR.sh  SECURITY_NOTES.md  START_NUR.desktop  START_NUR.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_rls_policies.py  0003_cognitive_substrate.py  0004_shared_orbit.py  0005_ai_readiness.py  0006_quiet_sound_default.py  0007_nur_omega_research_layer.py  0008_omega_v1_review_queue.py  0009_feature_lock_profile_preferences.py  0010_product_surfaces_i18n.py  0011_track_a_glow_translation.py  0012_sol_living_system.py  0013_map_feasibility.py  0014_am_projects.py  0015_live_intelligence.py  0016_group_nur.py  0017_community_glow.py  0018_council_demo_markers.py  0019_consultations.py  0020_notifications.py  0021_talk_stream_idempotency.py
apps/api/app/: main.py
apps/api/app/ai/: audit.py  budget.py  errors.py  openai_provider.py  prompts.py  provider.py  redaction.py  schemas.py  structured_outputs.py
apps/api/app/api/: deps.py  health.py
apps/api/app/cognition/: correction_service.py  cycle.py  evaluation_service.py  evidence_packet.py  hybrid_retrieval.py  intelligence_kernel.py  memory_candidate_service.py  memory_service.py  model_gateway.py  provenance.py  (+7 more)
(+303 files in other folders)
