[project]
name = "nur-api"
version = "0.1.0"
description = "NUR FastAPI backend — Phase 0 foundation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "email-validator>=2.1",
  "argon2-cffi>=23.1",
  "redis>=5.0",
  "celery>=5.4",
  "openai>=1.95",
]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
include = ["app*"]
